--- a/app/src/main/res/drawable/avatar_selected_border.xml
+++ b/app/src/main/res/drawable/avatar_selected_border.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" />
-    <corners android:radius="35dp"/>
+    <corners android:radius="35dp" />
     <stroke
-        android:color="@color/dark_orange"
-        android:width="5dp" />
-    <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp"/>
+        android:width="5dp"
+        android:color="@color/dark_orange" />
+    <padding
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"
+        android:top="2dp" />
 </shape>
