--- a/app/src/main/res/drawable/rounded_border.xml
+++ b/app/src/main/res/drawable/rounded_border.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/light_blue" />
     <corners android:radius="16dp" />
-    <stroke android:color="@color/light_blue_shadow" android:width="2dp"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/light_blue_shadow" />
 </shape>
