--- a/app/src/main/res/drawable/seek_bar.xml
+++ b/app/src/main/res/drawable/seek_bar.xml
@@ -1,30 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
-        <shape
-            android:shape="line">
+        <shape android:shape="line">
             <stroke
-                android:color="@color/white"
-                android:width="4dp"/>
+                android:width="4dp"
+                android:color="@color/white" />
         </shape>
     </item>
     <item android:id="@android:id/secondaryProgress">
         <clip>
-            <shape
-                android:shape="line">
+            <shape android:shape="line">
                 <stroke
-                    android:color="@color/dark_orange"
-                    android:width="4dp"/>
+                    android:width="4dp"
+                    android:color="@color/dark_orange" />
             </shape>
         </clip>
     </item>
 
     <item android:id="@android:id/progress">
         <clip>
-            <shape
-                android:shape="line">
+            <shape android:shape="line">
                 <stroke
-                    android:color="@color/light_blue"
-                    android:width="4dp"/>
+                    android:width="4dp"
+                    android:color="@color/light_blue" />
             </shape>
         </clip>
     </item>
