--- a/app/src/main/res/layout/begin_page.xml
+++ b/app/src/main/res/layout/begin_page.xml
@@ -5,12 +5,12 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/cedica_logo"
+        android:id="@+id/cedicaLogo"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="88dp"
-        android:src="@drawable/cedica_logo"
         android:contentDescription="@string/cedica_logo"
+        android:src="@drawable/cedica_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,11 +20,11 @@
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:layout_marginTop="70dp"
+        android:contentDescription="@string/horse_vector"
         android:src="@drawable/horse"
-        android:contentDescription="@string/vector_caballo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cedica_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/cedicaLogo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
